--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 04 14:24:10 EDT 2019
-sdk.dir=C\:\\Users\\oncol\\AppData\\Local\\Android\\Sdk
+#Sun Apr 07 23:53:41 EDT 2019
+sdk.dir=C\:\\Users\\Robert\\AppData\\Local\\Android\\Sdk
